webapp/dip/static/assets/css/px-form.css
.box,
.box__settings {
    font-size: 1.25rem;
    background-color: #c8dadf;
    position: relative;
    padding: 10px;
}

.box__padding {
    padding: 100px 20px;
}

.box.has-advanced-upload {
    outline: 2px dashed #92b0b3;
    outline-offset: -10px;

    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
    transition: outline-offset .15s ease-in-out, background-color .15s linear;
}

.box.is-dragover {
    outline-offset: -20px;
    outline-color: #c8dadf;
    background-color: #fff;
}

.box__dragndrop,
.box__icon {
    display: none;
}

.box.has-advanced-upload .box__dragndrop {
    display: inline;
}

.box.has-advanced-upload .box__icon {
    width: 100%;
    height: 80px;
    fill: #92b0b3;
    display: block;
    margin-bottom: 40px;
}

.box.is-uploading .box__input,
.box.is-success .box__input,
.box.is-error .box__input {
    visibility: hidden;
}

.box__uploading,
.box__success,
.box__error {
    display: none;
}

.box.is-uploading .box__uploading,
.box.is-success .box__success,
.box.is-error .box__error {
    display: block;
    position: absolute;
    top: 50%;
    right: 0;
    left: 0;

    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
}

.box__uploading {
    font-style: italic;
}

.box__success {
    -webkit-animation: appear-from-inside .25s ease-in-out;
    animation: appear-from-inside .25s ease-in-out;
}

@-webkit-keyframes appear-from-inside {
    from {
        -webkit-transform: translateY(-50%) scale(0);
    }

    75% {
        -webkit-transform: translateY(-50%) scale(1.1);
    }

    to {
        -webkit-transform: translateY(-50%) scale(1);
    }
}

@keyframes appear-from-inside {
    from {
        transform: translateY(-50%) scale(0);
    }

    75% {
        transform: translateY(-50%) scale(1.1);
    }

    to {
        transform: translateY(-50%) scale(1);
    }
}

.box__restart {
    font-weight: 700;
}

.box__restart:focus,
.box__restart:hover {
    color: #39bfd3;
}

.js .box__file {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

.js .box__file+label {
    text-overflow: ellipsis;
    white-space: nowrap;
    cursor: pointer;
    overflow: hidden;
    line-height: 30px;
    text-align: center;
    display: block;
    font-size: 22px;
}

.js .box__file+label strong {
    border-bottom: 1px dotted;
}

.js .box__file+label:hover strong,
.box__file:focus+label strong,
.box__file.has-focus+label strong {
    color: #39bfd3;
}

.js .box__file:focus+label,
.js .box__file.has-focus+label {
    outline: 1px dotted #000;
    outline: -webkit-focus-ring-color auto 5px;
}

.no-js .box__file+label {
    display: none;
}

.no-js .box__button {
    display: block;
}

.box__button {
    font-weight: 700;
    color: #e5edf1;
    background-color: #39bfd3;
    display: block;
    padding: 8px 16px;
    margin: 40px auto 0;
    font-size: large;
    border: none;
}

.box__button:hover,
.box__button:focus {
    background-color: #0f3c4b;
}

.box__slider {
    width: 100%;
}

.box__range {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    padding: 0;
    margin: 0;
}

.box__range::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
    border: 2px solid #01bffd;
}

.box__range::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
    border: 2px solid #01bffd;
}

.box__config {
    padding: 10px;
    outline: 2px dashed #92b0b3;
}

.box__config label {
    padding-bottom: 10px;
    display: block;
}

.box__title {
    font-size: 28px;
    line-height: 36px;
    margin-bottom: 10px;
    text-align: center;
    text-shadow: 2px 2px 4px;
    font-weight: 600;
    letter-spacing: 1.5px;
}

